--- a/private/app/Resources/views/HolluxBase/nav.html.twig
+++ b/private/app/Resources/views/HolluxBase/nav.html.twig
@@ -24,7 +24,7 @@
                 <a class="navbar-brand" href="{{ path('home') }}">
 
                     {#<img class="logo" src="/img/logoHollux3blanc.png" alt="logo">#}
-                    <img class="logo" src="/img/logoHollux3blanc.png" alt="logo">
+                    <img class="logo" src="{{ asset('img/logoHollux3blanc.png') }}" alt="logo">
 
                 </a>
 
