--- a/private/src/HolluxBundle/Resources/views/Base/index.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Base/index.html.twig
@@ -5,7 +5,7 @@
     <div class="home">
         <a href="#" title="Haut de page" class="scrollup"><i class="fa fa-arrow-up"></i></a>
         <div class="scrollUp"></div>
-        <img src="/img/bandeau.jpg" alt="bandeau">
+        <img src="{{ asset('img/bandeau.jpg') }}" alt="bandeau">
         <h1>Hollux, développeur full stack.</h1>
         <div class="home">
             <p>Je suis <b>Hollux</b>, aka Adrien Marchand.</p>
@@ -32,7 +32,7 @@
                             <div class="post-content post-content1">
                                 <div class="post-overlay">
                                     <div class="post-title">
-                                        <img class="imgHover4" src="/img/site4hover.jpg" alt="hover4">
+                                        <img class="imgHover4" src="{{ asset('img/site4hover.jpg') }}" alt="hover4">
                                     </div>
                                 </div>
                             </div>
@@ -46,7 +46,7 @@
                             <div class="post-content post-content2">
                                 <div class="post-overlay">
                                     <div class="post-title">
-                                        <img class="imgHover4" src="/img/site4hover.jpg" alt="hover4">
+                                        <img class="imgHover4" src="{{ asset('img/site4hover.jpg') }}" alt="hover4">
                                     </div>
                                 </div>
                             </div>
@@ -60,7 +60,7 @@
                             <div class="post-content post-content3">
                                 <div class="post-overlay">
                                     <div class="post-title">
-                                        <img class="imgHover4" src="/img/site4hover.jpg" alt="hover4">
+                                        <img class="imgHover4" src="{{ asset('img/site4hover.jpg') }}" alt="hover4">
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +80,7 @@
                             <div class="post-content post-content4">
                                 <div class="post-overlay">
                                     <div class="post-title">
-                                        <img class="imgHover4" src="/img/site3hover.jpg" alt="hover3">
+                                        <img class="imgHover4" src="{{ asset('img/site3hover.jpg') }}" alt="hover3">
                                     </div>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                         <div class="post-content post-content5">
                             <div class="post-overlay">
                                 <div class="post-title">
-                                    <img class="imgHover2" src="/img/site1hover.jpg" alt="hover1">
+                                    <img class="imgHover2" src="{{ asset('img/site1hover.jpg') }}" alt="hover1">
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                         <div class="post-content post-content6">
                             <div class="post-overlay">
                                 <div class="post-title">
-                                    <img class="imgHover3" src="/img/site2hover.jpg" alt="hover2">
+                                    <img class="imgHover3" src="{{ asset('img/site2hover.jpg') }}" alt="hover2">
                                 </div>
                             </div>
                         </div>
