--- a/private/src/HolluxBundle/Resources/views/Base/infoPerso.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Base/infoPerso.html.twig
@@ -28,7 +28,7 @@
 
                 <br>
 
-                <img src="/img/moi.jpg" alt="moi" width="100%">
+                <img src="{{ asset('img/moi.jpg') }}" alt="moi" width="100%">
 
             </div>
 
@@ -58,7 +58,7 @@
 
                 <br>
 
-                <img src="/img/colmar.jpg" alt="colmar" width="100%">
+                <img src="{{ asset('img/colmar.jpg') }}" alt="colmar" width="100%">
 
             </div>
 
@@ -87,7 +87,7 @@
 
                 <br>
 
-                <img src="/img/passions.jpg" alt="passions" width="100%">
+                <img src="{{ asset('img/passions.jpg') }}" alt="passions" width="100%">
 
             </div>
 
