--- a/private/src/HolluxBundle/Resources/views/Base/testimg.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Base/testimg.html.twig
@@ -7,8 +7,8 @@
         hic labore nobis porro recusandae ut! Amet eius 
         nostrum reiciendis sit. Adipisci alias beatae hic temporibus ullam?</p>
 
-    <img src="/img/beaujolais.jpg" alt="beaujolais">
-    <img src="/img/fill/1199/161/beaujolais.jpg" alt="beaujolais">
+    <img src="{{ asset('img/beaujolais.jpg') }}" alt="beaujolais">
+    <img src="{{ asset('img/fill/1199/161/beaujolais.jpg') }}" alt="beaujolais">
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dicta distinctio ducimus est 
         exercitationem fugit ipsam iste magni molestias 
