--- a/private/src/HolluxBundle/Resources/views/Crocon/croton.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Crocon/croton.html.twig
@@ -10,8 +10,8 @@
     <p>Nous avons utilisé nos métiers respectifs pour faire preuve d’originalité, et vous offrir une présentation de
         qualité :) Info : c’est Solveig à la rédac’.</p>
     <row>
-        <div class="col-md-6 text-center"><img class="imgPrincipal" src="/img/wakfu/holux.jpg" alt="holux"></div>
-        <div class="col-md-6 text-center"><img class="imgPrincipal" src="/img/wakfu/eni-croton.jpg" alt="okuri"></div>
+        <div class="col-md-6 text-center"><img class="imgPrincipal" src="{{ asset('img/wakfu/holux.jpg') }}" alt="holux"></div>
+        <div class="col-md-6 text-center"><img class="imgPrincipal" src="{{ asset('img/wakfu/eni-croton.jpg') }}" alt="okuri"></div>
     </row>
     <hr>
     <div class="row">
@@ -83,25 +83,25 @@
                 <p>xelor - 185</p>
                 <p>tri - distance/zone</p>
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/holuxStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/holuxStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Crasthor
                 Cra - 185
                 terre/feu distance
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/crasthorStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/crasthorStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Feecah Raboss
                 feca - 182
                 tank
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/feecahrabossStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/feecahrabossStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Elspethh
                 panda - 180
                 eau/feu support/zone
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/elspethhStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/elspethhStuff.jpg') }}" alt="persos" class="persos"></div>
         </div>
         <div class="row">
             <div class="col-md-1 col-sm-1">
@@ -109,25 +109,25 @@
                 Sacri - 159
                 air/feu tanky mele
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/polpotStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/polpotStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Holluwx
                 elio - 150
                 indéfini
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/holluwxStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/holluwxStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Hanatsukii
                 Roublard - 179
                 terre/air monok
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/hanatsukiiStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/hanatsukiiStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Hephai
                 enu - 177
                 eau/terre mono
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/stuff-enu.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/stuff-enu.jpg') }}" alt="persos" class="persos"></div>
         </div>
         <div class="row">
             <div class="col-md-1 col-sm-1">
@@ -135,25 +135,25 @@
                 zobal - 175
                 eau/air - mele/heal
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/rexiiStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/rexiiStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Unforii
                 steamer - 174
                 feu/stasis distance
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/unforiiStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/unforiiStuff.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Diana Agrotera
                 cra - 173
                 terre/air distance
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/stuff-cra.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/stuff-cra.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Kybele
                 sadi - 172
                 eau/air support
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/stuff-sadi.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/stuff-sadi.jpg') }}" alt="persos" class="persos"></div>
         </div>
         <div class="row">
             <div class="col-md-1 col-sm-1">
@@ -161,42 +161,42 @@
                 osa - 170
                 feu/air
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/stuff-osa.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/stuff-osa.jpg') }}" alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Okuri
                 eni - 164
                 eau/air soin
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/stuff-eni.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/stuff-eni.jpg') }}" alt="persos" class="persos"></div>
             {#<div class="col-md-1 col-sm-1">
                 Polpot
                 Sacri - 159
                 air/feu tanky mele
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/polpotStuff.jpg" alt="persos" class="persos"></div>
+            <div class="col-md-2 col-sm-2"><img src={{ asset('img/wakfu/polpotStuff.jpg') }}"/alt="persos" class="persos"></div>
             <div class="col-md-1 col-sm-1">
                 Holluwx
                 elio - 150
                 indéfini
             </div>
-            <div class="col-md-2 col-sm-2"><img src="/img/wakfu/crasthor.jpg" alt="persos" class="persos"></div>#}
+            <div class="col-md-2 col-sm-2"><img src={{ asset('img/wakfu/crasthor.jpg') }}"/alt="persos" class="persos"></div>#}
         </div>
     </div>
     <div class="row">
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/crasthor.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/feecahraboss.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/elspethh.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/hanatsukii.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/enu-croton.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/rexii.jpg" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/crasthor.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/feecahraboss.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/elspethh.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/hanatsukii.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/enu-croton.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/rexii.jpg') }}" alt="persos" class="persos"></div>
     </div>
     <div class="row">
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/unforii.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/cra-croton.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/sadi-croton.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/osa-croton.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/polpot.jpg" alt="persos" class="persos"></div>
-        <div class="col-md-2 col-sm-2"><img src="/img/wakfu/unfor.jpg" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/unforii.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/cra-croton.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/sadi-croton.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/osa-croton.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/polpot.jpg') }}" alt="persos" class="persos"></div>
+        <div class="col-md-2 col-sm-2"><img src="{{ asset('img/wakfu/unfor.jpg') }}" alt="persos" class="persos"></div>
     </div>
 
     <script>
