--- a/private/src/HolluxBundle/Resources/views/Tutos/generateur.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Tutos/generateur.html.twig
@@ -24,11 +24,10 @@
     </ul>
     <div id="submit" class="btn btn-primary">Generer</div>
     <div id="stop" class="btn btn-primary">Arreter</div>
-
 {% endblock %}
 
 {% block script %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('/scripts/generateur.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('scripts/generateur.js') }}"></script>
 {% endblock %}
 
