--- a/private/src/HolluxBundle/Resources/views/Tutos/hard/grid.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Tutos/hard/grid.html.twig
@@ -35,7 +35,7 @@
         <p>c'est celle de la rénovation et de la fraternité.</p>
     </div>
     <div class="col-lg-3 col-sm-6 ">
-        <img src="/img/tutos/article1.jpg" alt="imgArticle1">
+        <img src="{{ asset('img/tutos/article1.jpg') }}" alt="imgArticle1">
     </div>
     <div class="col-lg-3 col-sm-6 bg-lightgrey"  style="border-left: 10px white solid">
         <p>Tous les hommes libres, où qu'ils vivent, </p>
@@ -44,7 +44,7 @@
         <p>Ich bin ein Berliner !</p>
     </div>
     <div class="col-lg-3 col-sm-6 ">
-        <img src="/img/tutos/article2.jpg" alt="imgArticle2">
+        <img src="{{ asset('img/tutos/article2.jpg') }}" alt="imgArticle2">
     </div>
 </div>
                 </code>
@@ -58,22 +58,22 @@
                 <code class="language-markup">
 <div class="row">
     <div class="col-sm-2 text-center">
-        <img src="/img/tutos/logo1.jpg" alt="logo1">
+        <img src="{{ asset('img/tutos/logo1.jpg') }}" alt="logo1">
     </div>
     <div class="col-sm-2 text-center">
-        <img src="/img/tutos/logo2.png" alt="logo2">
+        <img src="{{ asset('img/tutos/logo2.png') }}" alt="logo2">
     </div>
     <div class="col-sm-2 text-center">
-        <img src="/img/tutos/logo3.png" alt="logo3">
+        <img src="{{ asset('img/tutos/logo3.png') }}" alt="logo3">
     </div>
     <div class="col-sm-2 text-center">
-        <img src="/img/tutos/logo4.png" alt="logo4">
+        <img src="{{ asset('img/tutos/logo4.png') }}" alt="logo4">
     </div>
     <div class="col-sm-2 text-center">
-        <img src="/img/tutos/logo5.png" alt="logo5">
+        <img src="{{ asset('img/tutos/logo5.png') }}" alt="logo5">
     </div>
     <div class="col-sm-2 text-center">
-        <img src="/img/tutos/logo6.png" alt="logo6">
+        <img src="{{ asset('img/tutos/logo6.png') }}" alt="logo6">
     </div>
 </div>
                 </code>
@@ -180,10 +180,10 @@
                 <code class="language-markup">
 <div class="row">
     <div class="col-sm-5 text-center">
-        <img src="/img/tutos/g1.jpg" alt="g1">
+        <img src="{{ asset('img/tutos/g1.jpg') }}" alt="g1">
     </div>
     <div class="col-sm-5 text-center">
-        <img src="/img/tutos/d1.jpg" alt="d1">
+        <img src="{{ asset('img/tutos/d1.jpg') }}" alt="d1">
     </div>
 </div>
                 </code>
@@ -197,10 +197,10 @@
                 <code class="language-markup">
 <div class="row">
     <div class="col-sm-5 text-center col-sm-offset-1">
-        <img src="/img/tutos/g2.jpg" alt="g2">
+        <img src="{{ asset('img/tutos/g2.jpg') }}" alt="g2">
     </div>
     <div class="col-sm-5 text-center">
-        <img src="/img/tutos/d2.jpg" alt="d2">
+        <img src="{{ asset('img/tutos/d2.jpg') }}" alt="d2">
     </div>
 </div>
                 </code>
