--- a/www/css/SASS/css/holluxSass.css
+++ b/www/css/SASS/css/holluxSass.css
@@ -188,7 +188,7 @@ img {
 //	 BASE HOLLUX     //
 ==================== */
 body {
-  background: url("/img/BG3.jpg"); }
+  background: url("../../../img/BG3.jpg"); }
 .container {
   background-color: white;
   min-height: calc(100vh - 50px);
@@ -286,17 +286,17 @@ body {
         right: -100%;
         transition: all .6s ease-in-out .2s; }
   .post .post-content1 {
-    background-image: url("/img/ludoWp.jpg"); }
+    background-image: url("../../../img/ludoWp.jpg"); }
   .post .post-content2 {
-    background-image: url("/img/haricotfr.jpg"); }
+    background-image: url("../../../img/haricotfr.jpg"); }
   .post .post-content3 {
-    background-image: url("/img/solveigdcfr.jpg"); }
+    background-image: url("../../../img/solveigdcfr.jpg"); }
   .post .post-content4 {
-    background-image: url("/img/chroniquesfr.jpg"); }
+    background-image: url("../../../img/chroniquesfr.jpg"); }
   .post .post-content5 {
-    background-image: url("/img/site1.jpg"); }
+    background-image: url("../../../img/site1.jpg"); }
   .post .post-content6 {
-    background-image: url("/img/wonder2.jpg"); }
+    background-image: url("../../../img/wonder2.jpg"); }
 
 .post:hover .post-content {
   transform: scale(1.1); }
@@ -406,7 +406,7 @@ footer {
   right: 15%;
   display: none;
   color: #C815D7;
-  background: url(/img/fleche_haut_blanc.png);
+  background: url(../../../img/fleche_haut_blanc.png);
   background-size: 100%;
   border: 1px solid #3a3f51;
   font-size: 20px;
@@ -427,7 +427,7 @@ footer {
   right: 20%;
   /* display: none; */
   color: #C815D7;
-  background: url(/img/fleche_bas_blanc.png);
+  background: url(../../../img/fleche_bas_blanc.png);
   background-size: 100%;
   border: 1px solid #3a3f51;
   font-size: 20px;
