--- a/private/app/Resources/views/Ecom/footer.html.twig
+++ b/private/app/Resources/views/Ecom/footer.html.twig
@@ -2,7 +2,7 @@
     <div class="text-center footerA">
         <div class="w25 fLeft footerB">
             <a class="m0auto" href="{{ path('home') }}">
-                <img class="m0auto" src="/img/logoHollux3blanc.png" alt="logo">
+                <img class="m0auto" src="{{ asset('img/logoHollux3blanc.png') }}" alt="logo">
             </a>
         </div>
         <div class="w25 fLeft  footerB">
