--- a/private/app/Resources/views/EdouardBase/base.html.twig
+++ b/private/app/Resources/views/EdouardBase/base.html.twig
@@ -6,10 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block titleBase %}Edouard{% endblock %}</title>
+
     <!--    BOOTSTRAP -->
-    <link href="{{ asset('/bootstrap/css/bootstrap.min.css') }}" media="print,screen" rel="stylesheet"/>
+    <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" media="print,screen" rel="stylesheet"/>
     <!--    JQUERY -->
-    <script type="text/javascript" src="{{ asset('/scripts/jquery-3.1.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('scripts/jquery-3.1.1.min.js') }}"></script>
     <!-- Google Analytic -->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -22,7 +23,7 @@
 
     </script>
     <!-- CSS -->
-    <link  href="{{ asset('/css/edouard.css') }}" media="print,screen" rel="stylesheet"/>
+    <link  href="{{ asset('css/edouard.css') }}" media="print,screen" rel="stylesheet"/>
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -50,9 +51,9 @@
 
 {% block script %}
     <!--    BOOTSTRAP JS -->
-    <script type="text/javascript" src="{{ asset('/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
     <!--    Edouard JS -->
-    <script type="text/javascript" src="{{ asset('/scripts/edouard.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('scripts/edouard.js') }}"></script>
 {% endblock %}
 </body>
 </html>
