--- a/private/app/Resources/views/HolluxBase/footer.html.twig
+++ b/private/app/Resources/views/HolluxBase/footer.html.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-3 text-center">
             <a href="{{ path('home') }}">
-                <img class="m0auto" src="/img/logoHollux3blanc.png" alt="logo">
+                <img class="m0auto" src="{{ asset ('img/logoHollux3blanc.png') }}" alt="logo">
             </a>
         </div>
         <div class="col-xs-3 text-center">
