--- a/private/src/HolluxBundle/Resources/views/FormTest/editformtest.html.twig
+++ b/private/src/HolluxBundle/Resources/views/FormTest/editformtest.html.twig
@@ -7,10 +7,9 @@
     <input type="submit" value="Create" class="btn">
     {{ form_end(form) }}
 
-
 {% endblock %}
 
 {% block script %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('/scripts/formimbrique.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('scripts/formimbrique.js') }}"></script>
 {% endblock %}
