--- a/private/src/HolluxBundle/Resources/views/Jeux/jeux.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Jeux/jeux.html.twig
@@ -15,7 +15,8 @@
             {{ form_start(form) }}
             <div class="row">
                 <div class="col-md-4">
-                    <img src='/img/minima/{{ form.question.number.vars.value }}.jpg'>
+                    {#<img src='/img/minima/{{ form.question.number.vars.value }}.jpg'>#}
+                    <img src="{{ asset('img/minima/'{{ form.question.number.vars.value }}'.jpg') }}">
 
                 </div>
                 <div class="col-md-2">
