--- a/private/src/HolluxBundle/Resources/views/SmashUp/smashUp.html.twig
+++ b/private/src/HolluxBundle/Resources/views/SmashUp/smashUp.html.twig
@@ -57,6 +57,6 @@
 {% block script %}
     {{ parent() }}
     {% include "HolluxBundle:SmashUp:smashupJS.html.twig" with { 'boites' : form.boites } %}
-    {#<script type="text/javascript" src="{{ asset('/scripts/smashup.js.twig', {'boites' : form.boites}) }}"></script>#}
+    {#<script type="text/javascript" src="{{ asset('scripts/smashup.js.twig', {'boites' : form.boites}) }}"></script>#}
 
 {% endblock %}
