--- a/private/src/HolluxBundle/Resources/views/Tutos/hard/kesako.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Tutos/hard/kesako.html.twig
@@ -74,10 +74,10 @@
             <pre>
                 <code class="language-markup">
                     <div class="row">
-                        <div class="col-lg-3 col-md-6"><img src="/img/tutos/col1.jpg" alt="col1"></div>
-                        <div class="col-lg-3 col-md-6"><img src="/img/tutos/col2.jpg" alt="col2"></div>
-                        <div class="col-lg-3 col-md-6"><img src="/img/tutos/col3.jpg" alt="col3"></div>
-                        <div class="col-lg-3 col-md-6"><img src="/img/tutos/col4.jpg" alt="col4"></div>
+                        <div class="col-lg-3 col-md-6"><img src="{{ asset('img/tutos/col1.jpg') }}" alt="col1"></div>
+                        <div class="col-lg-3 col-md-6"><img src="{{ asset('img/tutos/col2.jpg') }}" alt="col2"></div>
+                        <div class="col-lg-3 col-md-6"><img src="{{ asset('img/tutos/col3.jpg') }}" alt="col3"></div>
+                        <div class="col-lg-3 col-md-6"><img src="{{ asset('img/tutos/col4.jpg') }}" alt="col4"></div>
                     </div>
                 </code>
             </pre>
