--- a/private/src/HolluxBundle/Resources/views/VueJS/indexVueJS.html.twig
+++ b/private/src/HolluxBundle/Resources/views/VueJS/indexVueJS.html.twig
@@ -1,7 +1,8 @@
 {% extends":HolluxBase:base.html.twig" %}
 
 {% block head %}
-    <link  href="{{ asset('/library/Semantic-UI-CSS-master/semantic.css') }}"
+
+    <link  href="{{ asset('library/Semantic-UI-CSS-master/semantic.css') }}"
            media="print,screen" rel="stylesheet"/>
 
 {% endblock %}
@@ -32,6 +33,6 @@
     parent()
    {# <script type="text/javascript" src="
 {{ asset('https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/components/accordion.js') }}"></script>#}
-    <script type="text/javascript" src="{{ asset('/library/VueJS/vue.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/scripts/vueJS.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('library/VueJS/vue.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('scripts/vueJS.js') }}"></script>
 {% endblock %}
