--- a/private/app/Resources/views/HolluxBase/nav.html.twig
+++ b/private/app/Resources/views/HolluxBase/nav.html.twig
@@ -55,7 +55,7 @@
                         <li><a href="{{ path('homeApp') }}">App</a></li>
                         <li><a href="{{ path('homeEcom') }}">Ecom</a></li>
                         <li><a href="{{ path('homeHollux') }}">Hollux</a></li>
-                        <li class="barre"><a href="{{ path('homeListBuilder') }}">ListBuilder</a></li>
+                        <li class=""><a href="{{ path('homeListBuilder') }}">ListBuilder</a></li>
                         <li class="barre"><a href="{{ path('homeListHelper') }}">ListHelper</a></li>
                         <li class="barre"><a href="{{ path('homeMedia') }}">Media</a></li>
                         <li class="barre"><a href="{{ path('homeNews') }}">News</a></li>
