--- a/private/src/ListBuilderBundle/Resources/views/Default/homeListBuilder.html.twig
+++ b/private/src/ListBuilderBundle/Resources/views/Default/homeListBuilder.html.twig
@@ -5,6 +5,10 @@
 {% block principal %}
     <H1>HOME ListBuilder</H1>
 
+    <p>Projet d'un listeBuilder à la demande d'un ami.</p>
+    <p>Tests de réalisation basé sur le jeu warhammer, comme ce n'est qu'un test les éléments ne sont pas finalisé et les informations des contenu non plus.</p>
+    <P>Test Concluant, possibilité de réalisation d'un vrai listBuilder pour un autre jeu avec cette base.</P>
+
     <a href="{{ path('listbuilder_create') }}">Créer une liste</a>
     <br>
     <a href="{{ path('listbuilder_edit', {'idlist' : 1 } ) }}">Ex, liste 1</a>
