debug listbuilder / smashup

--- a/private/src/HolluxBundle/Resources/views/Base/index.html.twig
+++ b/private/src/HolluxBundle/Resources/views/Base/index.html.twig
@@ -19,7 +19,8 @@
             <p>Ne cherchez plus, vous avez trouvé ! Il ne vous reste plus qu'à <a href="meContacter">me contacter</a>.
             </p>
             <br>
-            <p>PS : Ce site est mon site sandbox ou je développe des tests. </p>
+            <p>PS : Ce site est mon <b>Ancien</b> site sandbox Symfony3 ou je développe des tests. </p>
+            <p>Il reste effectif pour les nombreux tests et code en tout genre qui y trainent.</p>
             <br>
             <h2>Quelques réalisations</h2>
 
