--- a/private/src/ListBuilderBundle/Resources/views/Default/homeListBuilder.html.twig
+++ b/private/src/ListBuilderBundle/Resources/views/Default/homeListBuilder.html.twig
@@ -11,7 +11,7 @@
 
     <a href="{{ path('listbuilder_create') }}">Créer une liste</a>
     <br>
-    <a href="{{ path('listbuilder_edit', {'idlist' : 1 } ) }}">Ex, liste 1</a>
+    <a href="{{ path('listbuilder_edit', {'idlist' : listeTest.id }) }}">Liste Test (si personne ne l'a détruite)</a>
 
 {% endblock %}
 
