--- a/private/app/Resources/views/TutosHollux/nav.html.twig
+++ b/private/app/Resources/views/TutosHollux/nav.html.twig
@@ -21,15 +21,15 @@
                 <ul class="dropdown-menu">
                     <li><a href="{{ path('kesako') }}">Kesako/Komensamarche?</a></li>
                     <li><a href="{{ path('grid') }}">Grid System</a></li>
-                    <li><a href="#">Les nav</a></li>
+                    <li class="barre"><a href="#">Les nav</a></li>
                 </ul>
             </li>
-            <li class="dropdown">
+            <li class="dropdown barre">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                    aria-expanded="false">html/css<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">La base du DevWeb ?</a></li>
-                    <li><a href="#">Sea, Flex and Sun</a></li>
+                    <li class="barre"><a href="#">La base du DevWeb ?</a></li>
+                    <li class="barre"><a href="#">Sea, Flex and Sun</a></li>
                 </ul>
             </li>
           {#  <li class="logoTutos imgNav"><a href="#"><img class="imglogo" src="/img/tutos/tutosHollux1-01.png" alt="logo"></a></li>#}
@@ -39,7 +39,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="#">A votre Service</a></li>
                     <li><a href="{{ path('enform') }}">En Form</a></li>
-                    <li><a href="#">Let's Twig again</a></li>
+                    <li class="barre"><a href="#">Let's Twig again</a></li>
                 </ul>
             </li>
             <li><a href="{{ path('boiteaidee') }}">Boite à idée</a></li>
